src/tests/fixtures/type_definitions/TagAttachedToWrongNode.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
function MyFunc() {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/type_definitions/TagAttachedToWrongNode.ts:1:5 - error: `@gqlType` can only be used on class or interface declarations.

1 /** @gqlType */
      ~~~~~~~~~
